syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.zinc.observe.cluster";
option java_outer_classname = "clusterProto";

package cluster;

import "cluster/common.proto";

service Event {
  rpc SendFileList (FileList) returns (EmptyResponse) {}
}

message FileList {
    repeated FileKey items = 1;
}

message FileKey {
    string   key     = 1;
    FileMeta meta    = 2;
    bool     deleted = 3;
}
